# Youtrack-mcp

./: .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: architecture_class_responsibilities.md  development_change_guide.md  main_memory_index.md  project_overview.md  style_and_conventions.md  testing_procedures.md
n8n/: Final Project.json  SubWorkflow.json
src/: config.py  formatters.py  main.py  models.py  server.py  utils.py  youtrack_client.py
