[project]
name = "youtrack-mcp"
version = "0.1.0"
description = "Servidor MCP (Model Context Protocol) para integración con YouTrack que permite obtener información de tableros ágiles y generar reportes de tareas en progreso"
authors = [
    { name = "javilujann", email = "jp.lujanromero@um.es" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["mcp", "youtrack", "model-context-protocol", "agile", "project-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "mcp",
    "requests",
]

[project.urls]
Homepage = "https://github.com/Digio-Campus/Youtrack-mcp"
Repository = "https://github.com/Digio-Campus/Youtrack-mcp"
Issues = "https://github.com/Digio-Campus/Youtrack-mcp/issues"

[project.scripts]
youtrack-mcp = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
